--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
   },
   "homepage": "https://github.com/xuguanghappy/todo-webpack-vue-try#readme",
   "dependencies": {
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.1",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
@@ -36,5 +33,11 @@
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
+  },
+  "devDependencies": {
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.1",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
